# CnC_Renegade

./: .gitmodules  code-notes.md
Code/: CMakeLists.txt  update-includes.sh
Code/Combat/: CMakeLists.txt  WeatherMgr.cpp  WeatherMgr.h  action.cpp  activeconversation.cpp  airstripgameobj.cpp  animcontrol.cpp  assetdep.cpp  backgroundmgr.cpp  backgroundmgr.h  basegameobj.cpp  beacongameobj.cpp  building.cpp  buildingaggregate.cpp  c4.cpp  ccamera.cpp  combat.cpp  combatsound.cpp  control.cpp  conversation.cpp  conversationmgr.cpp  damage.cpp  damageablestaticphys.cpp  debug.cpp  debug.h  diaglog.cpp  dialogue.cpp  directinput.cpp  doors.cpp  dynamicspeechanim.cpp  elevator.cpp  gameobjmanager.cpp  hud.cpp  humanrecoil.cpp  humanstate.cpp  humanstate.h  input.cpp  mapmgr.cpp  mendozabossgameobj.cpp  messagewindow.cpp  (+23 more)
Code/Commando/: AutoStart.cpp  AutoStart.h  WOLGameInfo.h  WOLLogonMgr.h  bandwidthcheck.h  datasafe.h  gamedata.h  gamesideservercontrol.h  natter.h  player.h  playermanager.h  slavemaster.h  wolgmode.cpp
Code/Launcher/: streamer.h  wdebug.h  winblows.h
Code/Tools/RenegadeGR/: tcpmgr.h
Code/Tools/pluglib/: Vector.H
Code/Tools/wlib/: arraylist.h  streamer.h  wdebug.cpp  wdebug.h  wstypes.h
Code/WWAudio/: AudibleSound.h  AudioEvents.h  PriorityVector.h  SoundBuffer.h  WWAudio.h
Code/WWMath/: CMakeLists.txt  gridcull.h  quat.h  v3_rnd.h
Code/WWOnline/: RefPtr.h  WOLChannel.h  WOLDownload.h  WOLSession.h  WOLSquad.h  WOLUser.h  WaitCondition.h
Code/wolapi/: WOLAPI.h
Code/ww3d2/: dllist.h  dx8wrapper.h  matinfo.h  render2dsentence.h  rendobj.h  segline.h  textureloader.h  texturethumbnail.h  vertmaterial.h
Code/wwbitpack/: BitPacker.h  bitstream.h  encodertypeentry.h
Code/wwdebug/: CMakeLists.txt  wwprofile.h
Code/wwlib/: CMakeLists.txt  FastAllocator.h  Notify.h  binheap.h  bittype.h  bool.h  chunkio.h  cpudetect.h  crc.h  ini.h  mempool.h  mmsys.h  mutex.h  point.h  refcount.h  systimer.h  thread.h  vector.h  widestring.h  wwstring.h
Code/wwnet/: fromaddress.h  netutil.h  networkobject.h  packetmgr.h  rhost.h
Code/wwphys/: pathmgr.h  pathsolve.h  physcon.h  physinttest.h
Code/wwsaveload/: CMakeLists.txt  pointerremap.h
Code/wwtranslatedb/: translatedb.h
Code/wwui/: IMECandidate.h  IMEManager.h  dialogbase.h
