set(combat_headers
action.h
actionparams.h
activeconversation.h
airstripgameobj.h
animcontrol.h
apppackettypes.h
armedgameobj.h
assetdep.h
assets.h
backgroundmgr.h
basecontroller.h
basegameobj.h
beacongameobj.h
bones.h
buildingaggregate.h
building.h
buildingmonitor.h
buildingstate.h
bullet.h
c4.h
ccamera.h
characterclasssettings.h
cheatmgr.h
cinematicgameobj.h
clientcontrol.h
CNCModeSettings.h
colors.h
combatchunkid.h
combatdazzle.h
combat.h
combatmaterialeffectmanager.h
combatphysobserver.h
combatsaveload.h
combatsound.h
comcentergameobj.h
control.h
conversation.h
conversationmgr.h
conversationremark.h
cover.h
crandom.h
csdamageevent.h
damageablegameobj.h
damageablestaticphys.h
damage.h
damagezone.h
debug.h
diaglog.h
dialogue.h
directinput.h
doors.h
dynamicspeechanim.h
effectrecycler.h
elevator.h
encyclopediamgr.h
evasettings.h
explosion.h
ffactorylist.h
gameobjmanager.h
gameobjobserver.h
gameobjref.h
gametype.h
globalsettings.h
harvester.h
hud.h
hudinfo.h
humanrecoil.h
humanstate.h
input.h
inventory.h
mapmgr.h
mendozabossgameobj.h
messagewindow.h
muzzlerecoil.h
netclassids.h
objectives.h
objectivesviewer.h
objlibrary.h
orator.h
oratortypes.h
pathaction.h
persistentgameobjobserver.h
physicalgameobj.h
pilot.h
playerdata.h
playerterminal.h
playertype.h
powerplantgameobj.h
powerup.h
purchasesettings.h
radar.h
raveshawbossgameobj.h
refinerygameobj.h
reflist.h
repairbaygameobj.h
sakurabossgameobj.h
samsite.h
savegame.h
scexplosionevent.h
scobeliskevent.h
screenfademanager.h
scriptablegameobj.h
scriptcommands.h
scriptevents.h
scripts.h
scriptzone.h
simplegameobj.h
smartgameobj.h
sniper.h
soldierfactorygameobj.h
soldier.h
soldierobserver.h
SoundEnvironment.h
spawn.h
specialbuilds.h
specialeffectsgameobj.h
statemachine.h
staticnetworkobject.h
string_ids.h
surfaceeffects.h
systeminfolog.h
teampurchasesettings.h
textwindow.h
timemgr.h
transitiongameobj.h
transition.h
unitcoordinationzonemgr.h
vehicledriver.h
vehiclefactorygameobj.h
vehicle.h
viseme.h
warfactorygameobj.h
weaponbag.h
weaponmanager.h
weapons.h
weaponview.h
WeatherMgr.h
)

set(combat_sources

action.cpp
activeconversation.cpp
airstripgameobj.cpp
animcontrol.cpp
armedgameobj.cpp
assetdep.cpp
assets.cpp
backgroundmgr.cpp
basecontroller.cpp
basegameobj.cpp
beacongameobj.cpp
bones.cpp
buildingaggregate.cpp
building.cpp
buildingmonitor.cpp
buildingstate.cpp
bullet.cpp
c4.cpp
ccamera.cpp
characterclasssettings.cpp
cheatmgr.cpp
cinematicgameobj.cpp
clientcontrol.cpp
CNCModeSettings.cpp
colors.cpp
combat.cpp
combatdazzle.cpp
combatmaterialeffectmanager.cpp
combatsaveload.cpp
combatsound.cpp
comcentergameobj.cpp
control.cpp
conversation.cpp
conversationmgr.cpp
conversationremark.cpp
cover.cpp
crandom.cpp
csdamageevent.cpp
damageablegameobj.cpp
damageablestaticphys.cpp
damage.cpp
damagezone.cpp
debug.cpp
diaglog.cpp
dialogue.cpp
directinput.cpp
doors.cpp
dynamicspeechanim.cpp
effectrecycler.cpp
elevator.cpp
encyclopediamgr.cpp
evasettings.cpp
explosion.cpp
ffactorylist.cpp
gameobjmanager.cpp
gameobjobserver.cpp
gametype.cpp
globalsettings.cpp
harvester.cpp
hud.cpp
hudinfo.cpp
humanrecoil.cpp
humanstate.cpp
input.cpp
inventory.cpp
mapmgr.cpp
mendozabossgameobj.cpp
messagewindow.cpp
muzzlerecoil.cpp
objectives.cpp
objectivesviewer.cpp
objlibrary.cpp
orator.cpp
oratortypes.cpp
pathaction.cpp
persistentgameobjobserver.cpp
physicalgameobj.cpp
pilot.cpp
playerdata.cpp
playerterminal.cpp
playertype.cpp
powerplantgameobj.cpp
powerup.cpp
purchasesettings.cpp
radar.cpp
raveshawbossgameobj.cpp
refinerygameobj.cpp
reflist.cpp
repairbaygameobj.cpp
sakurabossgameobj.cpp
samsite.cpp
savegame.cpp
scexplosionevent.cpp
scobeliskevent.cpp
screenfademanager.cpp
scriptablegameobj.cpp
scriptcommands.cpp
scripts.cpp
scriptzone.cpp
simplegameobj.cpp
smartgameobj.cpp
sniper.cpp
soldier.cpp
soldierfactorygameobj.cpp
soldierobserver.cpp
SoundEnvironment.cpp
spawn.cpp
specialeffectsgameobj.cpp
statemachine.cpp
staticnetworkobject.cpp
surfaceeffects.cpp
systeminfolog.cpp
teampurchasesettings.cpp
textwindow.cpp
timemgr.cpp
transition.cpp
transitiongameobj.cpp
unitcoordinationzonemgr.cpp
vehicle.cpp
vehicledriver.cpp
vehiclefactorygameobj.cpp
#viseme.cpp
warfactorygameobj.cpp
weaponbag.cpp
weaponmanager.cpp
weapons.cpp
weaponview.cpp
WeatherMgr.cpp
)

add_library(combat_lib STATIC ${combat_sources} ${combat_headers})
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwlib)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwphys)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwnet)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwbitpack)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwutil)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../WWAudio)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../ww3d2)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mingw-directx-headers)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../dxvk-windows-headers)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/RenegadeGR/)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwtranslatedb/)
target_include_directories(combat_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../wwui/)
target_include_directories(combat_lib PRIVATE ../WWMath)
target_include_directories(combat_lib PRIVATE ../wwdebug)
target_include_directories(combat_lib PRIVATE ../wwsaveload)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
#    TODO: need to enable WWDEBUG for debug builds, but need to fix the cross-platform stuff
#    target_compile_definitions(combat_lib PUBLIC WWDEBUG)
endif()
