set(wwlib_headers

always.h
argv.h
b64pipe.h
b64straw.h
base64.h
binheap.h
bittype.h
blitblit.h
blit.h
blitter.h
blowfish.h
blowpipe.h
blwstraw.h
bool.h
borlandc.h
bound.h
bsearch.h
bsurface.h
bufffile.h
buff.h
CallbackHook.h
chunkio.h
_convert.h
convert.h
cpudetect.h
crc.h
crcpipe.h
crcstraw.h
critsection.h
cstraw.h
data.h
dib.h
draw.h
dsurface.h
Except.h
FastAllocator.h
ffactory.h
fixed.h
font.h
gcd_lcm.h
global.h
hashcalc.h
hash.h
hashlist.h
hashtab.h
hashtemplate.h
hsv.h
iff.h
incdec.h
index.h
ini.h
inisup.h
int.h
iostruct.h
keyboard.h
LaunchWeb.h
lcw.h
lcwpipe.h
listnode.h
lzo1x.h
lzo_conf.h
lzoconf.h
lzo.h
lzopipe.h
lzostraw.h
md5.h
mempool.h
misc.h
mixfile.h
mmsys.h
monodrvr.h
_mono.h
mono.h
mpmath.h
mpu.h
msgloop.h
multilist.h
mutex.h
noinit.h
Notify.h
nstrdup.h
ntree.h
obscure.h
palette.h
pcx.h
pipe.h
pk.h
pkpipe.h
pkstraw.h
point.h
ramfile.h
random.h
rawfile.h
rc4.h
rcfile.h
readline.h
realcrc.h
refcount.h
ref_ptr.h
regexpr.h
registry.h
rgb.h
rle.h
rlerle.h
rndstraw.h
rndstrng.h
rng.h
rsacrypt.h
sampler.h
search.h
sha.h
shapeset.h
shapipe.h
sharebuf.h
shastraw.h
Signaler.h
simplevec.h
slist.h
slnode.h
smartptr.h
srandom.h
stimer.h
stl.h
straw.h
strtok_r.h
surface.h
surfrect.h
swap.h
systimer.h
tagblock.h
textfile.h
thread.h
_timer.h
timer.h
trackwin.h
trackxy.h
trect.h
trim.h
uarray.h
vector.h
verchk.h
visualc.h
watcom.h
widestring.h
win.h
WWCOMUtil.h
wwfile.h
wwfont.h
wwmouse.h
wwstring.h
_xmouse.h
xmouse.h
xpipe.h
xstraw.h
xsurface.h
)

set(wwlib_sources

argv.cpp
b64pipe.cpp
b64straw.cpp
base64.cpp
blit.cpp
blowfish.cpp
blowpipe.cpp
blwstraw.cpp
buff.cpp
bufffile.cpp
chunkio.cpp
_convert.cpp
convert.cpp
cpudetect.cpp
crc.cpp
crcpipe.cpp
crcstraw.cpp
critsection.cpp
cstraw.cpp
data.cpp
ddraw.cpp
dib.cpp
draw.cpp
dsurface.cpp
Except.cpp
FastAllocator.cpp
ffactory.cpp
fixed.cpp
gcd_lcm.cpp
hash.cpp
hsv.cpp
ini.cpp
int.cpp
jshell.cpp
keyboard.cpp
LaunchWeb.cpp
lcw.cpp
lcwpipe.cpp
load.cpp
lzo1x_c.cpp
lzo1x_d.cpp
lzo.cpp
lzopipe.cpp
lzostraw.cpp
md5.cpp
mixfile.cpp
_mono.cpp
mono.cpp
mpmath.cpp
mpu.cpp
msgloop.cpp
multilist.cpp
mutex.cpp
nstrdup.cpp
obscure.cpp
palette.cpp
pcx.cpp
pipe.cpp
pk.cpp
pkpipe.cpp
pkstraw.cpp
point.cpp
ramfile.cpp
random.cpp
rawfile.cpp
rc4.cpp
rcfile.cpp
readline.cpp
realcrc.cpp
refcount.cpp
regexpr.cpp
registry.cpp
rgb.cpp
rle.cpp
rndstraw.cpp
rndstrng.cpp
sampler.cpp
sha.cpp
shapipe.cpp
shastraw.cpp
slnode.cpp
srandom.cpp
stimer.cpp
straw.cpp
strtok_r.cpp
surface.cpp
systimer.cpp
tagblock.cpp
textfile.cpp
thread.cpp
_timer.cpp
trim.cpp
vector.cpp
verchk.cpp
widestring.cpp
win.cpp
WWCOMUtil.cpp
wwfile.cpp
wwfont.cpp
wwmouse.cpp
wwstring.cpp
xpipe.cpp
xstraw.cpp
xsurface.cpp
)

add_library(wwlib STATIC ${wwlib_sources} ${wwlib_headers})
